Configuração de banco por variável de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=${FEIJUCA_DATABASE_URL}
+spring.datasource.username=${FEIJUCA_DATABASE_USERNAME}
+spring.datasource.password=${FEIJUCA_DATABASE_PASSWORD}
 
