--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
       FEIJUCA_DATABASE_URL: ${FEIJUCA_DATABASE_URL}
       FEIJUCA_DATABASE_USERNAME: ${FEIJUCA_DATABASE_USERNAME}
       FEIJUCA_DATABASE_PASSWORD: ${FEIJUCA_DATABASE_PASSWORD}
+      FEIJUCA_GOOGLE_SIGNIN: ${FEIJUCA_GOOGLE_SIGNIN}
+      feijucaGoogle: ${FEIJUCA_GOOGLE_SIGNIN}
       expose: 8080
     restart: unless-stopped
