--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,8 @@ services:
       dockerfile: Dockerfile
     container_name: feijoadaweek_admin
     hostname: feijoadaweekadmin
+    env_file:
+      - .env
     environment:
-      FEIJUCA_DATABASE_URL: ${FEIJUCA_DATABASE_URL}
-      FEIJUCA_DATABASE_USERNAME: ${FEIJUCA_DATABASE_USERNAME}
-      FEIJUCA_DATABASE_PASSWORD: ${FEIJUCA_DATABASE_PASSWORD}
-      FEIJUCA_GOOGLE_SIGNIN: ${FEIJUCA_GOOGLE_SIGNIN}
-      feijucaGoogle: ${FEIJUCA_GOOGLE_SIGNIN}
       expose: 8080
     restart: unless-stopped
